--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,115 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Levitical</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Wagons</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <abbr>Mr.</abbr> Yorke</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <abbr>Mr.</abbr> Yorke (<em>continued</em>)</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Hollow’s Cottage</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Coriolanus</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Curates at Tea</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Noah and Moses</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Briarmains</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Old Maids</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Fieldhead</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Shirley and Caroline</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Further Communications on Business</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Shirley Seeks to Be Saved by Works</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: <abbr>Mr.</abbr> Donne’s Exodus</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Whitsuntide</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The School Feast</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Which the Genteel Reader Is Recommended to Skip, Low Persons Being Here Introduced.</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: A Summer Night</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Tomorrow</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: <abbr>Mrs.</abbr> Pryor</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Two Lives</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: An Evening Out</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: The Valley of the Shadow of Death</a>
+				</li>
+				<li>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The West Wind Blows</a>
+				</li>
+				<li>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Old Copybooks</a>
+				</li>
+				<li>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: The First Bluestocking</a>
+				</li>
+				<li>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Phœbe</a>
+				</li>
+				<li>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: Louis Moore</a>
+				</li>
+				<li>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Rushedge⁠—a Confessional</a>
+				</li>
+				<li>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Uncle and Niece</a>
+				</li>
+				<li>
+					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: The Schoolboy and the Wood-Nymph</a>
+				</li>
+				<li>
+					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Martin’s Tactics</a>
+				</li>
+				<li>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—remarkable Instance of Pious Perseverance in the Discharge of Religious Duties.</a>
+				</li>
+				<li>
+					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Wherein Matters Make Some Progress, but Not Much</a>
+				</li>
+				<li>
+					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Written in the Schoolroom</a>
+				</li>
+				<li>
+					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Winding-Up</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +142,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Shirley</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
