--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,7 +23,7 @@
 					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <abbr>Mr.</abbr> Yorke</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <abbr>Mr.</abbr> Yorke (<em>continued</em>)</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <abbr>Mr.</abbr> Yorke (Continued)</a>
 				</li>
 				<li>
 					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Hollow’s Cottage</a>
@@ -95,7 +95,7 @@
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: The First Bluestocking</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Phœbe</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Phoebe</a>
 				</li>
 				<li>
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: Louis Moore</a>
@@ -125,6 +125,9 @@
 					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Winding-Up</a>
 				</li>
 				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
@@ -143,6 +146,9 @@
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Shirley</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
