--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -101,7 +101,7 @@
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: Louis Moore</a>
 				</li>
 				<li>
-					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Rushedge⁠—a Confessional</a>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Rushedge⁠—A Confessional</a>
 				</li>
 				<li>
 					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Uncle and Niece</a>
@@ -113,7 +113,7 @@
 					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Martin’s Tactics</a>
 				</li>
 				<li>
-					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—remarkable Instance of Pious Perseverance in the Discharge of Religious Duties.</a>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—Remarkable Instance of Pious Perseverance in the Discharge of Religious Duties.</a>
 				</li>
 				<li>
 					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Wherein Matters Make Some Progress, but Not Much</a>
