Remove periods from chapter titles

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -65,7 +65,7 @@
 					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The School Feast</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Which the Genteel Reader Is Recommended to Skip, Low Persons Being Here Introduced.</a>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Which the Genteel Reader Is Recommended to Skip, Low Persons Being Here Introduced</a>
 				</li>
 				<li>
 					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: A Summer Night</a>
@@ -113,7 +113,7 @@
 					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Martin’s Tactics</a>
 				</li>
 				<li>
-					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—Remarkable Instance of Pious Perseverance in the Discharge of Religious Duties.</a>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—Remarkable Instance of Pious Perseverance in the Discharge of Religious Duties</a>
 				</li>
 				<li>
 					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Wherein Matters Make Some Progress, but Not Much</a>
