--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,10 +20,10 @@
 					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Wagons</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <abbr>Mr.</abbr> Yorke</a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <abbr>Mr.</abbr> Yorke</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <abbr>Mr.</abbr> Yorke (Continued)</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <abbr>Mr.</abbr> Yorke (Continued)</a>
 				</li>
 				<li>
 					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Hollow’s Cottage</a>
@@ -56,7 +56,7 @@
 					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Shirley Seeks to Be Saved by Works</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: <abbr>Mr.</abbr> Donne’s Exodus</a>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: <abbr>Mr.</abbr> Donne’s Exodus</a>
 				</li>
 				<li>
 					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Whitsuntide</a>
@@ -74,7 +74,7 @@
 					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Tomorrow</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: <abbr>Mrs.</abbr> Pryor</a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: <abbr>Mrs.</abbr> Pryor</a>
 				</li>
 				<li>
 					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Two Lives</a>
@@ -101,7 +101,7 @@
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: Louis Moore</a>
 				</li>
 				<li>
-					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Rushedge⁠—A Confessional</a>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Rushedge—A Confessional</a>
 				</li>
 				<li>
 					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Uncle and Niece</a>
@@ -113,7 +113,7 @@
 					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Martin’s Tactics</a>
 				</li>
 				<li>
-					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution⁠—Remarkable Instance of Pious Perseverance in the Discharge of Religious Duties</a>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Case of Domestic Persecution—Remarkable Instance of Pious Perseverance in the Discharge of Religious Duties</a>
 				</li>
 				<li>
 					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Wherein Matters Make Some Progress, but Not Much</a>
