--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2009 by<br/>
-			<b class="name">Brenda Lewis</b>, <b class="name">Fox in the Stars</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Brenda Lewis</b>, <b epub:type="z3998:personal-name">Fox in the Stars</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/30486">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
