--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/30486">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/shirley01bron">Internet Archive</a>.</p>
+			<a href="https://standardebooks.org/ebooks/charlotte-bronte/shirley#page-scans">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Countess Blessington</i>,<br/>
 			a painting completed in 1822 by<br/>
