--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -9,8 +9,158 @@
 		<section id="endnotes" epub:type="endnotes">
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
+				<li id="note-*" epub:type="endnote">
+					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note</cite><a href="chapter-32.xhtml#noteref-*" epub:type="backlink">↩</a></p>
+				</li>
 				<li id="note-1" epub:type="endnote">
-					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <a href="chapter-32.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p> <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-2" epub:type="endnote">
+					<p> <a href="chapter-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-3" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-4" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-5" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-6" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-7" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-8" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-8" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-9" epub:type="endnote">
+					<p> <a href="chapter-3.xhtml#noteref-9" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-10" epub:type="endnote">
+					<p> <a href="chapter-4.xhtml#noteref-10" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-11" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-11" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-12" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-13" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-13" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-14" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-14" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-15" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-15" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-16" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-16" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-17" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-17" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-18" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-18" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-19" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-19" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-20" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-20" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-21" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-21" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-22" epub:type="endnote">
+					<p> <a href="chapter-5.xhtml#noteref-22" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-23" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-24" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-25" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-25" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-26" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-27" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-27" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-28" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-28" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-29" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-29" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-30" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-30" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-31" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-32" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-32" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-33" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-33" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-34" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-34" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-35" epub:type="endnote">
+					<p> <a href="chapter-6.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-36" epub:type="endnote">
+					<p><blockquote epub:type="z3998:poem">
+						<p>
+							<span>“The voyage of life is but begun for me,</span>
+							<br/>
+							<span>And of the landmarks I must pass, I see</span>
+							<br/>
+							<span class="i1">So few behind me stand.</span>
+							<br/>
+							<span>At life's long banquet, now before me set,</span>
+							<br/>
+							<span>My lips have hardly touched the cup as yet</span>
+							<br/>
+							<span class="i1">Still brimming in my hand.</span>
+						</p>
+						<p>
+							<span>“I only know the spring; I would see autumn brown;</span>
+							<br/>
+							<span>Like the bright sun, that all the seasons crown,</span>
+							<br/>
+							<span class="i1">I would round out my year.</span>
+							<br/>
+							<span>A tender flower, the sunny garden's boast,</span>
+							<br/>
+							<span>I have but seen the fires of morning's host;</span>
+							<br/>
+							<span class="i1">Would eve might find me here!”</span><a href="endnotes.xhtml#note-36" id="noteref-36" epub:type="noteref">36</a>
+						</p>
+					</blockquote> <a href="chapter-6.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-37" epub:type="endnote">
+					<p> <a href="chapter-9.xhtml#noteref-37" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-38" epub:type="endnote">
+					<p> <a href="chapter-9.xhtml#noteref-38" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-39" epub:type="endnote">
+					<p> <a href="chapter-9.xhtml#noteref-39" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-40" epub:type="endnote">
+					<p> <a href="chapter-9.xhtml#noteref-40" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-41" epub:type="endnote">
+					<p> <a href="chapter-9.xhtml#noteref-41" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
