--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -9,115 +9,121 @@
 		<section id="endnotes" epub:type="endnotes">
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
-				<li id="note-*" epub:type="endnote">
-					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note</cite><a href="chapter-32.xhtml#noteref-*" epub:type="backlink">↩</a></p>
+				<li id="note-87" epub:type="endnote">
+					<p></p>
 				</li>
 				<li id="note-1" epub:type="endnote">
-					<p> <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>That's too much. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p> <a href="chapter-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>To hell with it! <a href="chapter-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>Awkward customer! <a href="chapter-3.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Awkward customer yourself; I’m only doing my duty; as for your oafish peasants, I don’t care! <a href="chapter-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+					<p>On the other hand, my lad, our oafish peasants will laugh at you; be sure of it. <a href="chapter-3.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>Alright! alright! And since it doesn’t matter to me, my friends shouldn’t worry about this. <a href="chapter-3.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+					<p>Your friends! Where are your friends? <a href="chapter-3.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-8" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-8" epub:type="backlink">↩</a></p>
+					<p>Indeed, let me echo this, where are they? and I’m rather glad to receive only an echo for an answer. To hell with friends! I still remember the time when my father and uncles Gérard summoned their friends for support, and God only knows if those friends hurried up to their help! Look, M. Yorke, I find this word, friend, irksome; don’t mention it anymore. <a href="chapter-3.xhtml#noteref-8" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-9" epub:type="endnote">
-					<p> <a href="chapter-3.xhtml#noteref-9" epub:type="backlink">↩</a></p>
+					<p>As you wish. <a href="chapter-3.xhtml#noteref-9" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-10" epub:type="endnote">
-					<p> <a href="chapter-4.xhtml#noteref-10" epub:type="backlink">↩</a></p>
+					<p>Bulging. <a href="chapter-5.xhtml#noteref-10" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-11" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-11" epub:type="backlink">↩</a></p>
+					<p>Well! Are you having breakfast this morning? <a href="chapter-5.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+					<p>Resources.<a href="chapter-5.xhtml#noteref-12" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-13" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-13" epub:type="backlink">↩</a></p>
+					<p>How outrageous! … How shameful! This really shows how stupid and wicked this country’s workers are. Exactly like English servants, especially the maids: there is nothing as unbearable as this Sara, for example!<a href="chapter-5.xhtml#noteref-13" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-14" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-14" epub:type="backlink">↩</a></p>
+					<p>But she is so insolent! <a href="chapter-5.xhtml#noteref-14" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-15" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-15" epub:type="backlink">↩</a></p>
+					<p>My poor brother! <a href="chapter-5.xhtml#noteref-15" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-16" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-16" epub:type="backlink">↩</a></p>
+					<p>Black sabots, clean and proper. <a href="chapter-5.xhtml#noteref-16" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-17" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-17" epub:type="backlink">↩</a></p>
+					<p>Streets. <a href="chapter-5.xhtml#noteref-17" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-18" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-18" epub:type="backlink">↩</a></p>
+					<p>Buskins. <a href="chapter-5.xhtml#noteref-18" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-19" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-19" epub:type="backlink">↩</a></p>
+					<p>I’d love to hear about it! <a href="chapter-5.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-20" epub:type="backlink">↩</a></p>
+					<p>My cousin, … I find all this dreadfully boring. <a href="chapter-5.xhtml#noteref-20" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-21" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-21" epub:type="backlink">↩</a></p>
+					<p>Good Heavens! … are there not even two lines of poetry to be found in the whole of French literature? <a href="chapter-5.xhtml#noteref-21" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-22" epub:type="endnote">
-					<p> <a href="chapter-5.xhtml#noteref-22" epub:type="backlink">↩</a></p>
+					<p>‘The Young Captive.’ <a href="chapter-5.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+					<p>A positive mindset. <a href="chapter-6.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+					<p>Logical analyses. <a href="chapter-6.xhtml#noteref-24" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-25" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-25" epub:type="backlink">↩</a></p>
+					<p>Treacle. <a href="chapter-6.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p>Far more appropriate. <a href="chapter-6.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-27" epub:type="backlink">↩</a></p>
+					<p>Achievements. <a href="chapter-6.xhtml#noteref-27" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-28" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-28" epub:type="backlink">↩</a></p>
+					<p>A regal brew. <a href="chapter-6.xhtml#noteref-28" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-29" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-29" epub:type="backlink">↩</a></p>
+					<p>Unworthy behaviour of this wicked creature. <a href="chapter-6.xhtml#noteref-29" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-30" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-30" epub:type="backlink">↩</a></p>
+					<p>These English rustics were unbearable one and all. <a href="chapter-6.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+					<p>Good cook from Antwerp. <a href="chapter-6.xhtml#noteref-31" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-32" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-32" epub:type="backlink">↩</a></p>
+					<p>Thank you for the gift! <a href="chapter-6.xhtml#noteref-32" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-33" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-33" epub:type="backlink">↩</a></p>
+					<p>Hussies. <a href="chapter-6.xhtml#noteref-33" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-34" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-34" epub:type="backlink">↩</a></p>
+					<p>A kind smile. <a href="chapter-6.xhtml#noteref-34" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-35" epub:type="endnote">
-					<p> <a href="chapter-6.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+					<p>Good Heavens! What is she talking about? <a href="chapter-6.xhtml#noteref-35" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-36" epub:type="endnote">
+					<p>So be it! <a href="chapter-6.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-37" epub:type="endnote">
+					<p>Fie, then! How childish! <a href="chapter-6.xhtml#noteref-37" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-38" epub:type="endnote">
 					<p><blockquote epub:type="z3998:poem">
 						<p>
 							<span>“The voyage of life is but begun for me,</span>
@@ -147,20 +153,176 @@
 						</p>
 					</blockquote> <a href="chapter-6.xhtml#noteref-36" epub:type="backlink">↩</a></p>
 				</li>
-				<li id="note-37" epub:type="endnote">
-					<p> <a href="chapter-9.xhtml#noteref-37" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-38" epub:type="endnote">
-					<p> <a href="chapter-9.xhtml#noteref-38" epub:type="backlink">↩</a></p>
-				</li>
 				<li id="note-39" epub:type="endnote">
-					<p> <a href="chapter-9.xhtml#noteref-39" epub:type="backlink">↩</a></p>
+					<p>Pieces of furniture. <a href="chapter-7.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="endnote">
-					<p> <a href="chapter-9.xhtml#noteref-40" epub:type="backlink">↩</a></p>
+					<p>This is getting interesting! <a href="chapter-9.xhtml#noteref-40" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-41" epub:type="endnote">
-					<p> <a href="chapter-9.xhtml#noteref-41" epub:type="backlink">↩</a></p>
+					<p>My sweet. <a href="chapter-9.xhtml#noteref-41" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-42" epub:type="endnote">
+					<p>My dear. <a href="chapter-9.xhtml#noteref-42" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-43" epub:type="endnote">
+					<p>Goodness, my friend! … Yours are true <i xml:lang="fr">enfants terribles</i>! <a href="chapter-9.xhtml#noteref-43" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-44" epub:type="endnote">
+					<p>Oafish peasants. <a href="chapter-9.xhtml#noteref-44" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-45" epub:type="endnote">
+					<p>Roughness. <a href="chapter-10.xhtml#noteref-45" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-46" epub:type="endnote">
+					<p>Clear as day. <a href="chapter-11.xhtml#noteref-46" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-47" epub:type="endnote">
+					<p>Delicate, graceful, spiritual. <a href="chapter-11.xhtml#noteref-47" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-48" epub:type="endnote">
+					<p>Incensed. <a href="chapter-13.xhtml#noteref-48" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-49" epub:type="endnote">
+					<p>Dash it! <a href="chapter-13.xhtml#noteref-49" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-50" epub:type="endnote">
+					<p>A good little lady. <a href="chapter-14.xhtml#noteref-50" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-51" epub:type="endnote">
+					<p>Explosively. <a href="chapter-15.xhtml#noteref-51" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-52" epub:type="endnote">
+					<p>Full dress. <a href="chapter-16.xhtml#noteref-52" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-53" epub:type="endnote">
+					<p>Chest voice. <a href="chapter-16.xhtml#noteref-53" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-54" epub:type="endnote">
+					<p>Machination. <a href="chapter-17.xhtml#noteref-54" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-55" epub:type="endnote">
+					<p>Yellow satin hat. <a href="chapter-17.xhtml#noteref-55" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-56" epub:type="endnote">
+					<p>Black silk dress. <a href="chapter-17.xhtml#noteref-56" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-57" epub:type="endnote">
+					<p>Linen gray. <a href="chapter-17.xhtml#noteref-57" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-58" epub:type="endnote">
+					<p>Distraught. <a href="chapter-19.xhtml#noteref-58" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-59" epub:type="endnote">
+					<p>Best friend. <a href="chapter-23.xhtml#noteref-59" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-60" epub:type="endnote">
+					<p>The jams! Did you burn them? Ah, what culpable negligence! Naughty cook, unbearable girl! <a href="chapter-23.xhtml#noteref-60" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-61" epub:type="endnote">
+					<p>My God! my god! Did I expect this? <a href="chapter-23.xhtml#noteref-61" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-62" epub:type="endnote">
+					<p>Are you still well, good sister? <a href="chapter-23.xhtml#noteref-62" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-63" epub:type="endnote">
+					<p>Come here, brother! <a href="chapter-23.xhtml#noteref-63" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-64" epub:type="endnote">
+					<p>My dear, … Robert is all that is most precious in the world; next to him the rest of humanity is but rubbish.—I’m right, my child, am I not? <a href="chapter-23.xhtml#noteref-64" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-65" epub:type="endnote">
+					<p>And you, Robert? <a href="chapter-23.xhtml#noteref-65" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-66" epub:type="endnote">
+					<p>That must be it. <a href="chapter-26.xhtml#noteref-66" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-67" epub:type="endnote">
+					<p>There, the French is won! <a href="chapter-26.xhtml#noteref-67" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-68" epub:type="endnote">
+					<p>Alright—for the fresh milk! <a href="chapter-26.xhtml#noteref-68" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-69" epub:type="endnote">
+					<p>‘Amazon Fragments.’ <a href="chapter-27.xhtml#noteref-69" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-70" epub:type="endnote">
+					<p>Very good. <a href="chapter-27.xhtml#noteref-70" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-71" epub:type="endnote">
+					<p>I’ve almost caught up with my French, haven’t I? <a href="chapter-27.xhtml#noteref-71" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-72" epub:type="endnote">
+					<p>Homework. <a href="chapter-27.xhtml#noteref-72" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-73" epub:type="endnote">
+					<p>‘The First Learned Lady.’ <a href="chapter-27.xhtml#noteref-73" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-74" epub:type="endnote">
+					<p>‘The Tamed Horse.’ <a href="chapter-27.xhtml#noteref-74" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-75" epub:type="endnote">
+					<p>Behold this fiery, impetuous horse. <a href="chapter-27.xhtml#noteref-75" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-76" epub:type="endnote">
+					<p>‘Athalia’s Dream.’ <a href="chapter-27.xhtml#noteref-76" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-77" epub:type="endnote">
+					<p>‘The Oak and the Reed.’ <a href="chapter-27.xhtml#noteref-77" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-78" epub:type="endnote">
+					<p>From the height of my superiority. <a href="chapter-28.xhtml#noteref-78" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-79" epub:type="endnote">
+					<p>Brazenness. <a href="chapter-28.xhtml#noteref-79" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-80" epub:type="endnote">
+					<p>Mischievous face. <a href="chapter-29.xhtml#noteref-80" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-81" epub:type="endnote">
+					<p>Brazen, malicious, teasing. <a href="chapter-29.xhtml#noteref-81" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-82" epub:type="endnote">
+					<p>Wild beast. <a href="chapter-29.xhtml#noteref-82" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-83" epub:type="endnote">
+					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note</cite><a href="chapter-32.xhtml#noteref-83" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-84" epub:type="endnote">
+					<p>Dumbfounded. <a href="chapter-33.xhtml#noteref-84" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-85" epub:type="endnote">
+					<p>Of superior souls. <a href="chapter-33.xhtml#noteref-85" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-86" epub:type="endnote">
+					<p>And brushed them with her lips. <a href="chapter-33.xhtml#noteref-86" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-87" epub:type="endnote">
+					<p>Brother? <a href="chapter-35.xhtml#noteref-87" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-88" epub:type="endnote">
+					<p>Litanies of the Holy Virgin. Heavenly rose, queen of angels! <a href="chapter-35.xhtml#noteref-88" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-89" epub:type="endnote">
+					<p>Ivory tower, golden house. <a href="chapter-35.xhtml#noteref-89" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-90" epub:type="endnote">
+					<p>The Great Turk. <a href="chapter-35.xhtml#noteref-90" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-91" epub:type="endnote">
+					<p>Your husband. <a href="chapter-36.xhtml#noteref-91" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-92" epub:type="endnote">
+					<p>Common, boring, base—ugly and a bit mean. <a href="chapter-36.xhtml#noteref-92" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-93" epub:type="endnote">
+					<p>It couldn’t be better. <a href="chapter-37.xhtml#noteref-93" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-94" epub:type="endnote">
+					<p>Dough. <a href="chapter-37.xhtml#noteref-94" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-95" epub:type="endnote">
+					<p>Good as bread. <a href="chapter-37.xhtml#noteref-95" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
