Corrected endnote punctuation

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
-					<p>That's too much. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>That’s too much. <a href="chapter-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
 					<p>To hell with it! <a href="chapter-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
@@ -73,7 +73,7 @@
 					<p>Good Heavens! … are there not even two lines of poetry to be found in the whole of French literature? <a href="chapter-5.xhtml#noteref-21" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-22" epub:type="endnote">
-					<p>‘The Young Captive.’ <a href="chapter-5.xhtml#noteref-22" epub:type="backlink">↩</a></p>
+					<p>The Young Captive. <a href="chapter-5.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
 					<p>A positive mindset. <a href="chapter-6.xhtml#noteref-23" epub:type="backlink">↩</a></p>
@@ -129,7 +129,7 @@
 							<br/>
 							<span class="i1">So few behind me stand.</span>
 							<br/>
-							<span>At life's long banquet, now before me set,</span>
+							<span>At life’s long banquet, now before me set,</span>
 							<br/>
 							<span>My lips have hardly touched the cup as yet</span>
 							<br/>
@@ -142,9 +142,9 @@
 							<br/>
 							<span class="i1">I would round out my year.</span>
 							<br/>
-							<span>A tender flower, the sunny garden's boast,</span>
+							<span>A tender flower, the sunny garden’s boast,</span>
 							<br/>
-							<span>I have but seen the fires of morning's host;</span>
+							<span>I have but seen the fires of morning’s host;</span>
 							<br/>
 							<span class="i1">Would eve might find me here!”</span>
 						</p>
@@ -244,7 +244,7 @@
 					<p>Alright—for the fresh milk! <a href="chapter-26.xhtml#noteref-68" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-69" epub:type="endnote">
-					<p>‘Amazon Fragments.’ <a href="chapter-27.xhtml#noteref-69" epub:type="backlink">↩</a></p>
+					<p>Amazon Fragments. <a href="chapter-27.xhtml#noteref-69" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-70" epub:type="endnote">
 					<p>Very good. <a href="chapter-27.xhtml#noteref-70" epub:type="backlink">↩</a></p>
@@ -256,19 +256,19 @@
 					<p>Homework. <a href="chapter-27.xhtml#noteref-72" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-73" epub:type="endnote">
-					<p>‘The First Learned Lady.’ <a href="chapter-27.xhtml#noteref-73" epub:type="backlink">↩</a></p>
+					<p>The First Learned Lady. <a href="chapter-27.xhtml#noteref-73" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-74" epub:type="endnote">
-					<p>‘The Tamed Horse.’ <a href="chapter-27.xhtml#noteref-74" epub:type="backlink">↩</a></p>
+					<p>The Tamed Horse. <a href="chapter-27.xhtml#noteref-74" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-75" epub:type="endnote">
 					<p>Behold this fiery, impetuous horse. <a href="chapter-27.xhtml#noteref-75" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-76" epub:type="endnote">
-					<p>‘Athalia’s Dream.’ <a href="chapter-27.xhtml#noteref-76" epub:type="backlink">↩</a></p>
+					<p>Athalia’s Dream. <a href="chapter-27.xhtml#noteref-76" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-77" epub:type="endnote">
-					<p>‘The Oak and the Reed.’ <a href="chapter-27.xhtml#noteref-77" epub:type="backlink">↩</a></p>
+					<p>The Oak and the Reed. <a href="chapter-27.xhtml#noteref-77" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-78" epub:type="endnote">
 					<p>From the height of my superiority. <a href="chapter-28.xhtml#noteref-78" epub:type="backlink">↩</a></p>
@@ -286,7 +286,7 @@
 					<p>Wild beast. <a href="chapter-29.xhtml#noteref-82" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-83" epub:type="endnote">
-					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author's note </cite><a href="chapter-32.xhtml#noteref-83" epub:type="backlink">↩</a></p>
+					<p>Find me an English word as good, reader, and I will gladly dispense with the French word. “Reflections” won’t do. <cite>—Author’s note </cite><a href="chapter-32.xhtml#noteref-83" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-84" epub:type="endnote">
 					<p>Dumbfounded. <a href="chapter-33.xhtml#noteref-84" epub:type="backlink">↩</a></p>
